Web Axe: Web Accessibility Books.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -191,6 +191,10 @@
         <a href="https://www.poynter.org/news/how-accessible-your-website-disabled-consider-doing-audit-find-out">How accessible is your website for the disabled? Consider doing an audit to find out</a>,
         <i class="website">Poynter</i>, 17.11.2017.
       </li>
+      <li>
+        <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
+        <i class="blog">Web Axe</i>, 26.11.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
