M. Heron: Building an Accessible Game Library...

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -148,6 +148,10 @@
       <li><a href="http://ian-hamilton.com/blog/">Ian Hamilton's blog</a>
         is mostly about game accessibility.
       </li>
+      <li>Michael Heron:
+        <a href="http://meeplelikeus.co.uk/building-accessible-game-library-budget-2017/">Building an Accessible Game Library on a Budget – 2017</a>,
+        <i class="blog">Meeple Like Us blog</i>, 04.05.2017.
+      </li>
       <li>Erin Hawley:
         &ldquo;<a href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility in Game Design</a>&rdquo;, Freelance Knight, 10 August 2015.
       </li>
