Coyier: Simple Patterns for Separation.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -195,6 +195,11 @@
         <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
         <i class="blog">Web Axe</i>, 26.11.2017.
       </li>
+      <li>Coyier, Chris:
+        <a href="https://css-tricks.com/simple-patterns-for-separation/">Simple Patterns for Separation (Better Than Color Alone)</a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
+        Article about charts in <abbr>SVG</abbr>.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
