Rodriguez: HTML Email and Accessibility.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -567,6 +567,10 @@
         <a href="https://www.inquisitr.com/3388499/visual-impairment-internet-what-i-learned-transcribing-facebook-memes/">Visual Impairment And Internet: What I Learned When I Started Transcribing Facebook Memes</a>,
         <i class="website">Inquisitr</i>, 06.08.2016.
       </li>
+      <li>Rodriguez, Jason:
+        <a href="https://css-tricks.com/html-email-accessibility/"><abbr>HTML</abbr> Email and Accessibility</a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 22.11.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
