Creemers: Website accessible for magnifier.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -200,6 +200,10 @@
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
         Article about charts in <abbr>SVG</abbr>.
       </li>
+      <li>Creemers, Frederick:
+        <a href="https://dev.to/_bigblind/how-to-make-your-website-accessible-to-people-who-use-a-screen-magnifier">How to Make Your Website Accessible to People Who Use a Screen Magnifier</a>,
+        <i class="website">dev.to()</i>, 07.06.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
