WAVE: site-wide checking features.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -94,6 +94,10 @@
         <a href="http://wave.webaim.org/">WAVE Web Accessibility Evaluation Tool</a>.
         Also available as 
         <a href="http://wave.webaim.org/extension/">browser extensions for Firefox and Chrome</a>.
+        <br />In November 2017, Web<abbr>AIM</abbr> added features to check pages across websites;
+        see the blog post
+        <a href="https://webaim.org/blog/new-site-wide-wave-tools/">New Site-wide <abbr>WAVE</abbr> Tools</a>
+        (28.11.2017).
       </li>
       <li>The 
         <a href="http://fae.disability.illinois.edu/">Functional Accessibility Evaluator (<abbr>FAE</abbr>)</a>
