Fisher: Getting started with website accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -204,6 +204,10 @@
         <a href="https://dev.to/_bigblind/how-to-make-your-website-accessible-to-people-who-use-a-screen-magnifier">How to Make Your Website Accessible to People Who Use a Screen Magnifier</a>,
         <i class="website">dev.to()</i>, 07.06.2017.
       </li>
+      <li>Fisher, Carie:
+        <a href="https://medium.com/statuscode/getting-started-with-website-accessibility-5586c7febc92">Getting Started with Website Accessibility</a>,
+        <i class="blog">Statuscode</i>, 11.09.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
