Fisher: Accessibility First.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -208,6 +208,10 @@
         <a href="https://medium.com/statuscode/getting-started-with-website-accessibility-5586c7febc92">Getting Started with Website Accessibility</a>,
         <i class="blog">Statuscode</i>, 11.09.2017.
       </li>
+      <li>Fisher, Carie:
+        <a href="https://www.24a11y.com/2017/accessibility-first/">Accessibility First: Rethinking the Way We Approach Website Design and Development</a>,
+        <i class="website">24 Accessibility</i>, 01.12.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
