Jubler: subtitle editor.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -167,6 +167,10 @@
         from one format to another. The supported formats include <abbr>VTT</abbr>, <abbr>SRT</abbr>
         and sami. (Licence: <abbr>LGPL</abbr>.)
       </li>
+      <li>
+        <a href="http://jubler.org/">Jubler Subtitle Editor</a>:
+        open-source tool developed in Java.  (Licence: <abbr>GPL</abbr>.)
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
