Wachs: Accessible Links Re:visited.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -228,6 +228,10 @@
         <a href="https://blog.prototypr.io/7-guidelines-for-writing-accessible-microcopy-8d52575f5d8e">7 guidelines for writing accessible microcopy</a>,
         <i class="blog">Prototypr</i>, 15.11.2017.
       </li>
+      <li>Wachs, Maggie:
+        <a href="https://www.filamentgroup.com/lab/a11y-links.html">Accessible Links Re:visited</a>,
+        <i class="website">Filament Group</i>, 06.12.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
