--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -610,6 +610,10 @@
         <a href="https://cantina.co/consistently-inconsistent-when-the-most-accessible-experience-is-different-for-each-user/">Consistently Inconsistent: When the Most Accessible Experience is Different for Each User</a>,
         <i class="website">Cantina</i>, 14.11.2017.
       </li>
+      <li>Johansson, Emma:
+        <a href="https://uploadvr.com/accessibility-vr-design/">Learning To Design Virtual Reality For Accessibility</a>,
+        <i class="website">Venturebeat</i>, 18.10.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
