Straub: Assassin's Creed Origins

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -148,6 +148,10 @@
       <li><a href="http://ian-hamilton.com/blog/">Ian Hamilton's blog</a>
         is mostly about game accessibility.
       </li>
+      <li>Josh Straub:
+        <a href="https://dagersystem.com/all-review-list/disability-game-review-assassins-creed-origins/">Disability Game Review: Assassin’s Creed Origins</a>,
+        <i class="website">Dager System</i>, 08.12.2017.
+      </li>
       <li>Michael Heron:
         <a href="http://meeplelikeus.co.uk/building-accessible-game-library-budget-2017/">Building an Accessible Game Library on a Budget – 2017</a>,
         <i class="blog">Meeple Like Us blog</i>, 04.05.2017.
