A. Campbell: Web a11y guidelines and how to use them.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -89,6 +89,10 @@
             <a href="https://www.linkedin.com/pulse/wcag-scary-anymore-progressive-approach-website-herin-hentry"><abbr>WCAG</abbr> is not scary anymore - A progressive approach to Website Accessibility</a>,
             LinkedIn Pulse, 25.07.2016. 
           </li>
+          <li>Alastair Campbell:
+            <a href="https://www.nomensa.com/blog/2017/web-accessibility-guidelines-and-how-use-them">Web accessibility guidelines and how to use them</a>,
+            <i class="blog">Nomensa blog</i>, 22.11.2017.
+          </li>
         </ul>
         <!-- Trace R&D Center: Page Author Guidelines - Version 8: Unified Web Site Accessibility Guidelines: January 1998: https://www.w3.org/WAI/GL/author.htm -->
       </li>
