Boudeau: AI and web accessibility.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -606,6 +606,10 @@
         <a href="https://css-tricks.com/html-email-accessibility/"><abbr>HTML</abbr> Email and Accessibility</a>,
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 22.11.2017.
       </li>
+      <li>Boudreau, Denis:
+        <a href="https://www.24a11y.com/2017/five-ways-in-which-ai-changes-the-face-of-web-accessibility/">Five Ways in Which Artificial Intelligence Changes the Face of Web Accessibility</a>,
+        <i class="website">24 Accessibility</i>, 06.12.2017.
+      </li>
       <li>Bailey, Eric:
         <a href="https://cantina.co/consistently-inconsistent-when-the-most-accessible-experience-is-different-for-each-user/">Consistently Inconsistent: When the Most Accessible Experience is Different for Each User</a>,
         <i class="website">Cantina</i>, 14.11.2017.
