--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -233,6 +233,10 @@
         <a href="https://www.filamentgroup.com/lab/a11y-links.html">Accessible Links Re:visited</a>,
         <i class="website">Filament Group</i>, 06.12.2017.
       </li>
+      <li>Genovese, Greg:
+        <a href="https://cantina.co/form-errors-screen-readers-can-access/">Form Errors Screen Readers Can Acces</a>,
+        <i class="blog">Cantina blog</i>, 29.03.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
