Maddox: Web accessibility in the corporate world.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -670,6 +670,10 @@
       <li>University of Melbourne:
         <a href="http://www.unimelb.edu.au/accessibility/virtual-reality">Accessibility of Virtual Reality Environments</a>.
       </li>
+      <li>Maddox, Donna:
+        <a href="https://www.24a11y.com/2017/web-accessibility-corporate-world/">Web Accessibility in the Corporate World</a>,
+        <i class="website">24 Accessibility</i>, 15.12.2017.
+      </li>
       <li>Meyer, Kate:
         <a href="https://www.nngroup.com/articles/flat-ui-less-attention-cause-uncertainty/">Flat <abbr>UI</abbr> Elements Attract Less Attention and Cause Uncertainty</a>,
         <i class="website">Nielsen Norman Group</i>, 03.09.2017.
