Ben-Ari: Inclusive design and testing

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -180,6 +180,10 @@
       <li><a href="http://www.apps4android.org/"><strong>Apps4Android</strong></a>,
         Not Just For Profit (<abbr>NJFP</abbr>) corporation, developer Android
         accessibility applications.</li>
+      <li>Maya Ben-Ari:
+        <a href="https://www.youtube.com/watch?v=SOZwfQO4rVM">Inclusive design and testing: Making your app accessible - Google I/O 2016</a>
+        (YouTube, 40 minutes, 20 May 2016).
+      </li>
       <li>Phil Weaver, Eve Andersson, Casey Burkhardt, Hugh Oh, Mark Riccobono:
         <a href="https://www.youtube.com/watch?v=euEsfNR5Zw4">Improve Your Android App's Accessibility</a>,
         talk from Google I/O 2015.
