Ontario: inclusive design toolkit

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -352,6 +352,9 @@
         <a href="https://medium.com/@wojtekkutyla/heydon-pickering-accessibility-responsibility-and-inclusive-design-6fd8ae9883b8">Heydon Pickering — accessibility, responsibility and inclusive design</a>,
         <i class="blog">Wojtek Kytula on Medium</i>, 13.12.2017.
       </li>
+      <li>Ontario (Canada):
+        <a href="https://www.ontario.ca/page/inclusive-design-toolkit">Inclusive design toolkit</a>.
+      </li>
     </ul>
 
     <h2>Braille</h2>
