--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -56,20 +56,6 @@
         <a href="https://www.nomensa.com/blog/2017/how-structure-headings-web-accessibility">How to structure headings for web accessibility</a>,
         <i class="blog">Nomensa blog</i>, 14.08.2017.
       </li>
-      <li>Cao, Jerry:
-        <a href="https://www.uxpin.com/studio/blog/8-website-accessibility-best-practices-to-improve-ux/">8 Website Accessibility Best Practices to Improve <abbr>UX</abbr></a>,
-        <i class="blog"><abbr>UX</abbr>Pin blog</i>, 02.03.2016 (updated 23.06.2016).
-      </li>
-      <!-- @@move to web accessibility / research page -->
-      <li>Schmutz, Sven; Sonderegger, Andreas; Sauer, Jürgen: 
-        <a href="http://journals.sagepub.com/doi/abs/10.1177/0018720816640962">Implementing Recommendations From Web Accessibility Guidelines: Would They Also Provide Benefits to Nondisabled Users</a>.
-        <i class="journal">Human Factors: The Journal of the Human Factors and Ergonomics Society</i>, Vol 58, Issue 4 (2016).
-      </li>
-      <li>Aizpurua, Amaia; Harper, Simon; Vigo, Markel: 
-        <a href="http://www.sciencedirect.com/science/article/pii/S1071581916000409">Exploring the Relationship between Web Accessibility and User Experience</a>.
-        <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
-        <!-- https://www.researchgate.net/publication/300086655_Exploring_the_relationship_between_web_accessibility_and_user_experience -->
-      </li>
       <li lang="de">
         <a href="http://www.hellbusch.de/meine-barrierefreiheit-deine-barrierefreiheit/">Meine Barrierefreiheit, Deine Barrierefreiheit: Studie zur Wirkung von barrierefreien Webseiten auf ihre Nutzer</a>,
         24.06.2014.
@@ -254,6 +240,24 @@
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
         (this was frozen in August 2017 and will not be developed further).
         <!--@@recheck status in December 2017-->
+      </li>
+    </ul>
+
+    <h3>Accessibility and User Experience (<abbr>UX</abbr>)</h3>
+    <ul>
+      <li>Cao, Jerry:
+        <a href="https://www.uxpin.com/studio/blog/8-website-accessibility-best-practices-to-improve-ux/">8 Website Accessibility Best Practices to Improve <abbr>UX</abbr></a>,
+        <i class="blog"><abbr>UX</abbr>Pin blog</i>, 02.03.2016 (updated 23.06.2016).
+      </li>
+      <li>Aizpurua, Amaia; Harper, Simon; Vigo, Markel: 
+        <a href="http://www.sciencedirect.com/science/article/pii/S1071581916000409">Exploring the Relationship between Web Accessibility and User Experience</a>.
+        <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
+        <!-- https://www.researchgate.net/publication/300086655_Exploring_the_relationship_between_web_accessibility_and_user_experience -->
+      </li>
+      <!-- @@move to web accessibility / research page -->
+      <li>Schmutz, Sven; Sonderegger, Andreas; Sauer, Jürgen: 
+        <a href="http://journals.sagepub.com/doi/abs/10.1177/0018720816640962">Implementing Recommendations From Web Accessibility Guidelines: Would They Also Provide Benefits to Nondisabled Users</a>.
+        <i class="journal">Human Factors: The Journal of the Human Factors and Ergonomics Society</i>, Vol 58, Issue 4 (2016).
       </li>
     </ul>
 
