--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -85,22 +85,29 @@
 
     <h2>Standards and References</h2>
     <ul>
+      <li><a href="https://www.w3.org/TR/2017/REC-wai-aria-1.1-20171214/">
+        <strong>Accessible Rich Internet Applications (<abbr>WAI-ARIA</abbr>) 1.1</strong>:
+        <abbr>W3C</abbr> Recommendation 14 December 2017</a>.
+        <!--@@still contains the phrase "This draft currently handles..."-->
+      </li>
       <li><a href="http://www.w3.org/TR/2014/REC-wai-aria-20140320/">
-        <strong>Accessible Rich Internet Applications (<abbr>WAI-ARIA</abbr>) 1.0</strong>:
-        <abbr>W3C</abbr> Recommendation 20 March 2014</a>. 
+        Accessible Rich Internet Applications (<abbr>WAI-ARIA</abbr>) 1.0:
+        <abbr>W3C</abbr> Recommendation 20 March 2014</a>.
       </li>
       <li>
-        <a href="https://www.w3.org/TR/wai-aria-practices-1.1/"><strong><abbr>WAI-ARIA</abbr> Authoring Practices 1.1</strong></a> 
-        (under development) explains how to use <abbr>WAI-ARIA</abbr> to create accessible rich internet applications.
+        <a href="https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/"><strong><abbr>WAI-ARIA</abbr> Authoring Practices 1.1</strong>: <abbr>W3C</abbr> Working Group Note 14 December 2017</a>: 
+        explains how to use <abbr>WAI-ARIA</abbr> to create accessible rich internet applications.
         <br />Note: <abbr>WAI-ARIA</abbr> 1.0 Authoring Practices was retired in July 2016.
         (<a href="http://www.w3.org/WAI/PF/aria-practices/">This draft</a> is no longer relevant.)
       </li>
+      <!--Removed by AOL:
       <li><abbr>AOL</abbr> Access: 
         <a href="http://access.aol.com/dhtml-style-guide-working-group/">
         <abbr>DHTML</abbr> Style Guide Working Group</a>:
         <q cite="http://access.aol.com/dhtml-style-guide-working-group/">recommendation 
         for keyboard shortcuts to be used in website widgets</q>.
       </li>
+      -->
       <li>Mozilla Developer Network (<abbr>MDN</abbr>):
         <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA">
         <abbr>ARIA</abbr> - Accessibility</a>:
