--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -179,6 +179,11 @@
           See also 
           <a href="https://github.com/ember-a11y">Ember <abbr>A11y</abbr></a> on GitHub.
       </li>
+      <li><a href="https://www.totalvalidator.com/">Total Validator</a>:
+        tool that performs several types of checks:
+        <abbr>HTML</abbr> validation, validation against <abbr>WCAG</abbr> and the <abbr>US</abbr> Section 508 requirements,
+        checking for broken links, and spell checking for a small set of languages (English, French, Italian, Spanish and German).
+      </li>
     </ul>
 
     <ul>
