--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -311,8 +311,9 @@
     <h3>Cauldron</h3>
     <ul>
       <li>
-        <a href="https://pattern-library.dequelabs.com/">Cauldron</a>;
-        see the
+        <a href="https://pattern-library.dequelabs.com/">Cauldron</a>
+        is a <q>fullyaccessible <abbr>HTML</abbr>, <abbr>CSS</abbr>, and Javascript front-end framework for creating web and mobile applications</q>.
+        For the source code, see the
         <a href="https://github.com/dequelabs/pattern-library">GitHub repository</a>.
       </li>
     </ul>
