--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -292,12 +292,14 @@
       <li>Hoffmann, Nicolas:
         <a href="http://a11y.nicolas-hoffmann.net/">Accessibility section - jQuery Plugins</a>.
         <br />For example: <a href="http://a11y.nicolas-hoffmann.net/tabs/">jQuery Accessible tab panel system, using <abbr>ARIA</abbr></a>.
-        See also the <a href="https://github.com/nico3333fr/jquery-accessible-tabs-aria">source code on GitHub</a>.
+        See also the <a href="https://github.com/nico3333fr/jquery-accessible-tabs-aria">source code on GitHub</a>
+        (licence: <abbr>MIT</abbr>).
       </li>
       <li>Hans Hillen:
         <a href="https://hanshillen.github.io/jqtest/">Accessible jQuery-ui Components Demonstration</a>:
         demos of accessible widgets that were developed within the 
         <a href="http://www.aegis-project.eu/">AEGIS project</a> (2008&ndash;2012).
+        The <a href="https://github.com/hanshillen/jqtest/">GitHub repository</a> has no licence.
       </li>
       <li>Bryan Garaventa:
         <a href="http://www.ssbbartgroup.com/blog/jquery-ui-accessibility-analysis/">jQuery UI Accessibility Analysis</a>,
