--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -190,14 +190,6 @@
 
     <p>Other tools:</p>
     <ul>
-      <li><a href="https://github.com/accesslint/access_lint">access_lint</a>:
-        <q cite="https://github.com/accesslint/access_lint">Check for web accessibility errors from Ruby</q>.
-        Available under the <abbr>MIT</abbr> licence. 
-        Uses the <a href="https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules">Audit
-        Rules</a> defined for the Google Chrome accessibility developer tools.
-        See also the other checkers by the organisation
-        &ldquo;<a href="https://github.com/accesslint">accesslint</a>&rdquo;.
-      </li>
       <li>Peter Kranz: 
         <a href="http://www.peterkrantz.com/raakt/wiki/"><abbr>Raakt</abbr> - 
         The Ruby Accessibility Analysis Kit</a>.
@@ -206,7 +198,8 @@
         3-clause licence</a>.
       </li>
       <li>Squiz Labs:
-        <a href="https://github.com/squizlabs/HTML_CodeSniffer">HTML_CodeSniffer</a>:
+        <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML_CodeSniffer</a>&nbsp;/ 
+        <a href="https://github.com/squizlabs/HTML_CodeSniffer">HTML_CodeSniffer (on GitHub)</a>:
         <q cite="https://github.com/squizlabs/HTML_CodeSniffer">HTML_CodeSniffer 
         is a client-side JavaScript application that checks a <abbr>HTML</abbr> document 
         or source code, and detects violations of a defined coding standard. 
@@ -232,6 +225,18 @@
         Licence: <a href="https://github.com/neurites/seleniumAccessibility/blob/master/LICENSE"
         lang="en-US"><abbr>MIT</abbr>
         License</a>.
+      </li>
+      <li><del><a href="https://github.com/accesslint/access_lint">access_lint</a>:
+        <q cite="https://github.com/accesslint/access_lint">Check for web accessibility errors from Ruby</q>.
+        Available under the <abbr>MIT</abbr> licence. 
+        Uses the <a href="https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules">Audit
+        Rules</a> defined for the Google Chrome accessibility developer tools.</del>
+        (This tool is no longer being maintained. The developer instead recommends
+        <a href="https://www.accesslint.com/">AccessLint</a>,
+        which is available as
+        <a href="https://github.com/marketplace/accesslint">an app in the GitHub Marketplace</a>.)
+        See also the other checkers by the organisation
+        &ldquo;<a href="https://github.com/accesslint">accesslint</a>&rdquo;.
       </li>
       <!--li><a href=""></a>
       </li-->
