URL and licence updates/additions.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -59,7 +59,8 @@
       the creation of flexible solutions for people with disabilities using a 
       large set of sensors and actuators.</q>
       The project's source code is
-      <a href="http://www.asterics.eu/index.php?id=88">available on GitHub</a>.
+      <a href="https://github.com/asterics/AsTeRICS">available on GitHub</a>
+      (licences: <abbr>LGPL</abbr> for some libraries, <abbr>MIT</abbr> or <abbr>GPL</abbr> with CLASSPATH exception for some other parts).
     </p>
 
     <h2><abbr>ACAT</abbr></h2>
@@ -74,7 +75,8 @@
       on 23 April 2015 and can be donwloaded from the
       <a href="https://01.org/acat/downloads"><abbr>ACAT</abbr> download page</a>.
       The project also has a
-      <a href="https://github.com/01org/acat">GitHub repository</a>.
+      <a href="https://github.com/01org/acat">GitHub repository</a>
+      (licence: Apache 2.0<!--@@not properly applied?-->).
     </p>
     <p><abbr>ACAT</abbr> was originally developed for 
       the English physicist 
