ACCESSIBLE personas: TCP error.

--- a/personas.html
+++ b/personas.html
@@ -70,6 +70,8 @@
         a set of personas for use in 
         <a href="https://en.wikipedia.org/wiki/Assisted_living"><abbr title="ambient assisted living">AAL</abbr></a> 
         and related projects.
+        Detailed information about the creation process can be found in the report
+        <a href="http://elderlypersonas.tech-experience.at/uploads/media/share_personas/documents/CeP_Deliverable_2.pdf">Deliverable 2 - Results of multivariate analysis and CURE-Elderly-Personas (<abbr>PDF</abbr>)</a>.
       </li>
       <li>Barclays:
         <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Accessibility - Inclusive Design</a>:
@@ -99,6 +101,7 @@
         <a href="http://alistapart.com/article/reframing-accessibility-for-the-web">Reframing Accessibility for the Web</a>, 
         <i class="magazine">A List Apart</i>, 3 February 2015.
       </li>
+      <!--
       <li>Personas created by the 
         <a href="http://160.40.50.89/Accessible_Ontology/Version5.1/AccessibleOntologyOWLDoc/user.html">ACCESSIBLE project</a>
         (2008-2010).
@@ -106,6 +109,7 @@
         <a href="https://en.wikipedia.org/wiki/Ontology_%28information_science%29">ontology</a>
         that is rendered as a set of <abbr>HTML</abbr> pages.
       </li>
+      --><!--@@05.01.2018: TCP error-->
       <li>Christopher Phillips: 
         <a href="http://curbcut.net/accessibility/personas-of-persons-with-disabilities/">Personas of Persons with Disabilities</a>,
         <i class="website">Curb Cut</i>, 11.12.2007.
