Newer versions of Mageia and OpenSUSE.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -98,7 +98,7 @@
         Some consider MATE the best choice for users with serious visual impairments (including blindness).
         (However, GNOME 3 has a better magnifier and a black-on-white contrast theme.)
         <br />
-        <a href="http://www.linuxmint.com/">Linux Mint</a> includes 
+        In 2014, <a href="http://www.linuxmint.com/">Linux Mint</a> included 
         <a href="http://blog.linuxmint.com/?p=2713">MATE as one of its default desktop environments</a>.
         Fedora also has a 
         <a href="https://spins.fedoraproject.org/mate-compiz/">MATE Compiz spin</a>.
@@ -115,13 +115,13 @@
         <a href="https://www.debian.org/">Debian</a>
         (you need to select the desktop you want during the installation process),
         <a href="http://mageia.org/">Mageia</a>
-        (you need to select <a href="https://wiki.mageia.org/en/Mageia_5_Release_Notes#Mate">Mate</a>
+        (you need to select <a href="https://wiki.mageia.org/en/Mageia_6_Release_Notes#Mate">Mate</a>
         during the installation process),
         <a href="https://www.gentoo.org/">Gentoo</a>
         (see the <a href="https://wiki.gentoo.org/wiki/MATE">Gentoo page about Mate</a>)
         and
         <a href="https://www.opensuse.org/en/">OpenSUSE</a>
-        (see the <a href="https://doc.opensuse.org/release-notes/x86_64/openSUSE/13.2/#idm139856738618352">release notes</a>).
+        (see the <a href="https://doc.opensuse.org/release-notes/x86_64/openSUSE/13.2/#idm140533315308944">release notes</a>).
         For a 
         <a href="https://en.wikipedia.org/wiki/Lightweight_Linux_distribution">lightweight Linux distribution</a>
         that offers MATE, see
