Distro updates: Sonar, Vinux, HandyLinux.
Sonar and Vinux may have merged. HandyLinux became DFLinux (or Debian
Facile?).

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -144,22 +144,22 @@
 
     <h2>Specialised Linux Distributions</h2>
     <ul>
-      <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
+      <li><a href="https://sourceforge.net/projects/sonargnulinux/">Sonar <abbr>GNU</abbr>/Linux</a>:<!--http://sonargnulinux.com/ no longer working 08.01.2018-->
         a Linux distribution that focuses on assistive technologies.
-        <br />Sonar 2016.03 is part of the 
+        <br />Sonar 2016.03 was part of the 
         <a href="https://manjaro.github.io/about/">Manjaro</a> build system.
         It has versions with GNOME and versions with Mate.
         See 
-        <a href="http://sonargnulinux.com/sonar-2016-3-is-out/">Sonar 2016.3 is out!</a> 
-        on the Sonar blog and
+        <del><a href="http://sonargnulinux.com/sonar-2016-3-is-out/">Sonar 2016.3 is out!</a> 
+        on the Sonar blog and</del>
         <a href="https://manjaro.github.io/Sonar-16.03-released/">Sonar 2016.03 released - an accessible OS focused on assistive technology</a> 
         on the Manjaro website.
       </li>
       <li><a href="http://vinuxproject.org/">Vinux</a>:
         a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
         <br /><strong>Note</strong>:
-        It is possible that Sonar and Vinux will merge and use Fedora as their starting point.
-        <!-- J-P Mengual, 25.02.2017 -->
+        It is possible that Sonar and Vinux will merge and use Fedora as their starting point<!-- J-P Mengual, 25.02.2017 -->;
+        that was the outcome of a <a href="http://wiki.vinuxproject.org/sonar_merges_with_vinux">meeting in early 2017</a>.
       </li>
       <li><a href="http://www.knopper.net/knoppix-adriane/index-en.html">
         <abbr>ADRIANE</abbr> - Audio Desktop Reference Implementation and Networking Environment</a>:
@@ -169,21 +169,22 @@
       </li>
       <li>
         <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch</a>: 
-        TalkingArch is a bootable CD or USB image optimised for blind users. 
+        TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
         The system stars speaking at boot time.
         TalkingArch is not an official release of the Arch Linux project.
       </li>
-      <li><a href="http://handylinux.org/index-en.html">HandyLinux</a>:
-        a Debian-based French distribution aimed at beginners, elderly people 
+      <li><a href="https://lescahiersdudebutant.fr/handylinux/" hreflang="fr">HandyLinux</a><!--http://handylinux.org/index-en.html redirects to newer site 08.01.2018 -->
+        was a Debian-based French distribution aimed at beginners, elderly people 
         and anyone who needs simplicity. 
         Version 2, which was released on 
         <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">16 May 2015</a>,
-        is based on Debian 8, although it is only available as a 32-bit version. 
-        It uses <a href="http://www.xfce.org/">Xfce</a> as desktop environment
-        and includes the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
+        was based on Debian 8, although it is only available as a 32-bit version. 
+        It used <a href="http://www.xfce.org/">Xfce</a> as desktop environment
+        and included the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
         (which is part of GNOMEShell), a screen magnifier, an on-screen keyboard 
         and simplified menus.
         <br />
+        <!--
         See the 
         <a href="http://wiki.handylinux.org/doku.php/en/access">Accessibility Tools</a>
         page for more information about the included assistive technologies. 
@@ -195,6 +196,10 @@
         <a href="http://blog.handylinux.org/article192/handylinuxlight-2-0-est-disponible">HandyLinuxLight-2.0</a>
         was released on 23 May 2015.
         (Note: the installation procedure might not be easy enough for beginners.)
+        -->
+        In July 2016, 
+        <a href="http://blog.handylinux.org/article249/handylinux-devient-dflinux-pour-grandir-encore-et-toucher-encore-plus-de-novices">HandyLinux joined or became <span lang="fr">Debian Facile</span></a>.
+        <!-- Debian Facile: https://debian-facile.org/ Projet DFLinux "Debian 9 Stretch pour les (très) grands débutants": https://dflinux.frama.io/home/ - see also https://lescahiersdudebutant.fr/handylinux/ -->
       </li>
       <li>
         <a href="http://www.linux-speakup.org/projects.html">The SpeakUp Project</a> &amp;
