M. Sutton: Writing Automated Tests ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -273,6 +273,13 @@
         <a href="https://www.24a11y.com/2017/build-cloud-hosted-accessibility-testing-windows-computer-using-amazon-workspaces/">How to build a cloud-hosted accessibility testing Windows computer using Amazon WorkSpaces</a>,
         <i class="website">24 Accessibility</i>, 17.12.2017.
       </li>
+      <li>Sutton, Marcy:
+        <a href="https://www.deque.com/blog/writing-automated-tests-accessibility/">Writing Automated Tests for Accessibility</a>,
+        <i class="blog">Deque blog</i>, 03.01.2018.
+        <br />For testing in general, Marcy Sutton recommends watching Justin Searls's talk
+        <a href="http://blog.testdouble.com/posts/2015-11-16-how-to-stop-hating-your-tests">How to Stop Hating Your Tests</a>
+        (RubyConf 2015).
+      </li>
     </ul>
 
     <h2>Designing for People with Disabilities &amp; Accessibility in General</h2>
