--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -85,7 +85,7 @@
             summaries of the guidelines for
             <q>Webmasters who may have some knowledge of HTML or programming</q>.
           </li>
-          <li>Hentry,Herin: 
+          <li>Hentry, Herin: 
             <a href="https://www.linkedin.com/pulse/wcag-scary-anymore-progressive-approach-website-herin-hentry"><abbr>WCAG</abbr> is not scary anymore - A progressive approach to Website Accessibility</a>,
             LinkedIn Pulse, 25.07.2016. 
           </li>
@@ -96,6 +96,10 @@
           <li>Sims, Glenda:
             <a href="https://www.deque.com/blog/what-is-wcag-2-1-history/">Understanding <abbr>WCAG</abbr> 2.1: A History of <abbr>WCAG</abbr></a>,
             <i class="blog">Deque blog</i>, 01.11.2017.
+          </li>
+          <li>Sims, Glenda:
+            <a href="https://www.deque.com/blog/understanding-wcag-2-1-reviewing-cognitive-success-criteria/">Understanding <abbr>WCAG</abbr> 2.1 – Reviewing Cognitive Success Criteria</a>,
+            <i class="blog">The Deque Blog</i>, 09.01.2018.
           </li>
         </ul>
         <!-- Trace R&D Center: Page Author Guidelines - Version 8: Unified Web Site Accessibility Guidelines: January 1998: https://www.w3.org/WAI/GL/author.htm -->
