Ryerson: Digital Accessibility as a Business Practice.

--- a/courses.html
+++ b/courses.html
@@ -162,6 +162,11 @@
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
       <li>
+        <a href="https://de.ryerson.ca/wa/business/">Digital Accessibility as a Business Practice</a>
+        is three-week course by Ryerson University. 
+        The next week starts on 5 February 2018.
+      </li>
+      <li>
         <a href="http://www.coursesites.com/s/_IDDITMOOCAP">Intellectual Disability and Inclusion</a>
         is a five-week course by the Dublin Institute of Technology. 
         The first run started on 7 August 2017.
