BDI: Learning Directly From Disabled People.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -715,6 +715,10 @@
         <a href="https://www.nngroup.com/articles/flat-ui-less-attention-cause-uncertainty/">Flat <abbr>UI</abbr> Elements Attract Less Attention and Cause Uncertainty</a>,
         <i class="website">Nielsen Norman Group</i>, 03.09.2017.
       </li>
+      <li>
+        <a href="http://www.businessdisabilityinternational.org/learning-directly-from-disabled-people/">Learning Directly From Disabled People</a>,
+        <i class="website">Business Disability International</i>.
+      </li>
       <!--
       <li>
         <a href=""></a>
