Montana Accessibility MOOC.

--- a/courses.html
+++ b/courses.html
@@ -162,6 +162,11 @@
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
       <li>
+        <a href="http://accessibility.mrooms.net/">The Accessibility <abbr>MOOC</abbr>: Inclusive Online Course Design</a>
+        is a course that will run from 2 April to 27 April 2018.
+        <!-- "designed and facilitated by University of Montana’s Aaron Page and Marlene Zentz" https://moodle.com/2017/07/06/accessibility-mooc/ -->
+      </li>
+      <li>
         <a href="https://de.ryerson.ca/wa/business/">Digital Accessibility as a Business Practice</a>
         is three-week course by Ryerson University. 
         The next week starts on 5 February 2018.
