Handicap: l'épineuse question de l'accessibilité ...

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -222,6 +222,9 @@
         <a href="http://www.afjv.com/news/1097_jeu-video-accessible-jva2012.htm" hreflang="fr" lang="fr">Résultats du jury pour le concours de création de jeu vidéo accessible JVA2012</a>,
         <i class="website" lang="fr">Agence Française pour le Jeu Vidéo (afjv)</i>, 30 May 2012.
       </li>
+      <li><a href="http://www.jeuxvideo.com/news/778312/handicap-l-epineuse-question-de-l-accessibilite-aux-jeux-video.htm" hreflang="fr" lang="fr">Handicap : l'épineuse question de l'accessibilité aux jeux vidéo</a>,
+        <i class="website">jeuxvideo.com</i>, 17.01.2018.
+      </li>
     </ul>
 
 
