--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </li>
       -->
     </ul>
-    <p>Other <a href="miscellaneous-links.html">unsorted link</a>.</p>
+    <p>Other <a href="miscellaneous-links.html">unsorted links</a>.</p>
   </div>
     <!--
       * Gez Lemon: "Accessible Drag and Drop Using WAI-ARIA", Dev.Opera, 08.09.2009: https://dev.opera.com/articles/accessible-drag-and-drop/ 
