Cashin: The dngine driving Web a11y standaridisation

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -413,6 +413,10 @@
 
     <h2>Articles about Automated Accessibility Evaluation</h2>
     <ul>
+      <li>Cashin, Caitlin:
+        <a href="https://medium.com/@caitlin.cashin/the-engine-driving-web-accessibility-standardization-4515d87250ca">The Engine Driving Web Accessibility Standardization</a>,
+        <i class="blog">Caitlin Cash (on Medium)</i>, 10.01.2018.
+      </li>
       <li>Dan Holbrook:
         <a href="https://www.nerdery.com/blog/the-power-and-limits-of-automated-accessibility-testing">The Power (and Limits) of Automated Accessibility Testing</a>,
         <i class="blog">Nerdery Blog</i>, 01.06.2017.
