Boudrea: AI and accessibiity

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -723,6 +723,10 @@
         <a href="http://www.businessdisabilityinternational.org/learning-directly-from-disabled-people/">Learning Directly From Disabled People</a>,
         <i class="website">Business Disability International</i>.
       </li>
+      <li>Boudreau, Denis:
+        <a href="https://www.deque.com/blog/ways-artificial-intelligence-face-web-accessibility/">Five Ways in Which Artificial Intelligence Changes the Face of Web Accessibility</a>,
+        <i class="blog">The Deque Blog</i>, 16.01.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
@@ -742,6 +746,8 @@
     * Engineering4Society Conference 2015: Proceedings: http://www.engineering4society.org/2015 / http://www.esat.kuleuven.be/stadius/engineering4society/2015/proceedings.php 
     * Lexical Quality as a Measure for Textual Web Accessibility - Paper for Web Accessibility Metrics Symposium (W3C Web Accessibility Metrics Symposium, 05.12.2011: https://www.w3.org/WAI/RD/2011/metrics/paper5/ 
     * David Swallow: "Sounding out the web: accessibility for deaf and hard of hearing people [Part 1]", Paciello Group, 13.02.2017: https://www.paciellogroup.com/blog/2017/02/sounding-out-the-web-accessibility-for-deaf-and-hard-of-hearing-people-part-1/ 
+    * Robert Nyman: "The Building For Just One Browser Thing", 18.01.2018: https://robertnyman.com/2018/01/18/the-building-for-just-one-browser-thing/#comment-1703327 (Not directly about accessibility.)
+    * object-explorer: " A resource to help figure out what JavaScript object method would be best to use at any given time https://sdras.github.io/object-explorer/": https://github.com/sdras/object-explorer
   -->
   <!-- CAPTCHA:
     * CAPTCHA: Inaccessible to Everyone: http://www.sitepoint.com/captcha-inaccessible-to-everyone/
