Mike Gifford: Accessibility Courses.

--- a/courses.html
+++ b/courses.html
@@ -302,6 +302,9 @@
           </li>
         </ul>
       </li>
+      <li>Gifford, Mike:
+        <a href="https://github.com/mgifford/a11y-courses">Accessibility Courses</a>.
+      </li>
     </ul>
 
   </main>
