Gifford: Accessibility Lists of lists.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -727,6 +727,9 @@
         <a href="https://www.deque.com/blog/ways-artificial-intelligence-face-web-accessibility/">Five Ways in Which Artificial Intelligence Changes the Face of Web Accessibility</a>,
         <i class="blog">The Deque Blog</i>, 16.01.2018.
       </li>
+      <li>Gifford, Mike:
+        <a href="https://github.com/mgifford/a11y-lists-of-lists/blob/master/README.md">Accessibility Lists of lists</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
